--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -1,22 +1,20 @@
 {% extends "base.html"%}
 
+{% block title %}About Us{% endblock %}
+
 {% block content%}
-<h1>About</h1>
+<h1>ABOUT US</h1>
 <h3>{{ title|capfirst|title }}</h3>
-<p>This is a Templates</p>
 
 {{ my_html|safe }}
+
+<p>Nothing to write YET</p>
 
 <p>
     {{my_number}}<br>
     {{my_list}}
 </p>
 
-<ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-
-</ul>
 
 <ul>
 {% for abc in my_list%}
